# automation_testcases

./: README.md  ayushi.py  config.json  pyproject.toml
configuration/: config.ini
lib/sitePageFactory/: admin_login_page.py
lib/utils/: base_page_object.py  customLogger.py  readProperties.py
reports/: 21fac3cb-257a-4216-8526-57fe5d44837f-attachment.txt  23bcc7b1-8f65-46a4-a4b0-cb1d0b1ada18-container.json  302dd68f-bfb3-453f-9145-e980980d1d38-result.json  3d1c816b-cc6d-4604-a42f-7623a8e460b6-container.json  409ad7ba-4662-4cef-9d7b-ade4c2318919-container.json  449893ae-542a-446f-a6b9-175f3361d13e-container.json  63a7f28d-730f-418f-a4b9-367f9a47bf02-result.json  6ef98a97-c67f-4df1-9ca0-cca3bccba0ef-container.json  74f27bf2-51ee-468d-94e0-4611c7e1b1a1-container.json  7a8e11c6-d69f-4d28-9a80-472027fd03d9-result.json  8682ab8c-7318-4422-a1ac-15245dcd7a79-container.json  9ca7692b-f760-417d-afb6-82cf00404889-attachment.txt  a3092bb0-e4b8-462b-b745-a4313ce9878d-container.json  b49cc5df-e5b0-4063-ada0-a946484377f1-container.json  b6626428-8bd4-4d6b-b043-0017aebe76b9-result.json  d0833e9c-1569-490a-9649-978b781df3bb-container.json  dba3c7fa-7c9b-4dac-8c48-fa7436844044-container.json  f8b9892c-6719-4265-b14a-f59ce748b0e5-container.json
tests/: conftest.py  test_login.py
