[tool.poetry]
name = "MY_TESTING_FRAMEWORK"
version = "0.1.0"
description = "Creating a venew for Test Project"
authors = ["Ayushi Shrivastava"]


[tool.poetry.dependencies]
python = "^3.7"
pytest = "6.2.4"
selenium = "3.141.0"
webdriver-manager = "2.5.3"
allure-pytest = "2.8.40"
openpyxl = "3.0.10"
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"